--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Hy's Pokemon Catching Game</title>
 
     <script type="module" src="./pokemonEncounters/browserSetup.js"></script>
+    <link rel="stylesheet" href="index.css">
 
 </head>
 <body>
@@ -16,9 +17,23 @@
     <button id="encounter-one">Encounter ONE Pokemon</button>
     <button id="encounter-six">Encounter SIX Pokemon</button>
 
-    <h1>Wild Pokemon: </h1>
-    <div id="pokemon-encounters">
-        <!-- Intentionally left blank, will be populated by JS code -->
+    <div id="app-flex-container">
+        <div>
+            <h1>Caught Pokemon: </h1>
+            <div id="pokemon-caught">
+                <!-- Intentionally left blank, will be populated by JS code -->
+            </div>
+        </div>
+    
+        <div>
+            <h1>Wild Pokemon: </h1>
+            <div id="pokemon-encounters">
+                <!-- Intentionally left blank, will be populated by JS code -->
+            </div> 
+        </div>
     </div>
+
+
+
 </body>
 </html>
